# quiz-live-app

./: .gitignore  README.md  render.yaml
backend/: create_demo_data.py  debug_db.py  pyproject.toml
backend/app/: database.py  main.py  models.py  question_service.py  schemas.py  simulator_models.py  simulator_schemas.py  simulator_service.py  websocket_manager.py
frontend/: .env.production  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: HomePage.tsx  PDFUpload.tsx  QuizSession.tsx  SimulatorPage.tsx  StudentLobby.tsx  TeacherDashboard.tsx
frontend/src/components/simulator/: ExcelSimulator.tsx  PowerPointSimulator.tsx  SimulatorContainer.tsx  SimulatorEngine.tsx  SimulatorUI.tsx  Windows10Simulator.tsx  WordSimulator.tsx
frontend/src/components/ui/: form.tsx  navigation-menu.tsx  sidebar.tsx
frontend/src/services/: simulatorApi.ts
frontend/src/types/: simulator.ts
