[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.117.1"}
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
redis = "^6.4.0"
websockets = "^15.0.1"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"
pypdf2 = "^3.0.1"
sentence-transformers = "^5.1.1"
chromadb = "^1.1.0"
openai = "^1.109.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
